[gd_scene load_steps=4 format=3 uid="uid://cpjjhmw4gdy70"]

[ext_resource type="Script" path="res://actors/projectile/projectile.gd" id="1_6loc4"]
[ext_resource type="Texture2D" uid="uid://c0ta44nbhmy01" path="res://Assets/Green_projectile.png" id="2_gkme0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qbs76"]

[node name="Projectile" type="Area2D"]
script = ExtResource("1_6loc4")

[node name="MainSprite" type="Sprite2D" parent="."]
scale = Vector2(20, 20)
texture = ExtResource("2_gkme0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_qbs76")

[node name="TimeToLive" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="TimeToLive" to="." method="_on_time_to_live_timeout"]
